refactor:comment db
