# docs/swagger.yaml
@@ -2,21 +2,17 @@ basePath: /api/v1
 definitions:
   dto.CommentRequestDTO:
     properties:
-      blod_id:
-        example: 2
+      blog_id:
+        example: 4
         type: integer
       content:
         example: content
         type: string
       id:
         type: integer
-      user_id:
-        example: 1
-        type: integer
     required:
-    - blod_id
+    - blog_id
     - content
-    - user_id
     type: object
   dto.ResponseErrorDTO:
     properties:
