# dto/CommentDTO.go
@@ -3,8 +3,7 @@ package dto
 type CommentRequestDTO struct {
 	ID      int64  `json:"id"`
 	Content string `json:"content" form:"content" binding:"required" example:"content"`
-	UserID  uint64 `json:"user_id" form:"user_id" binding:"required" example:"1"`
-	BlogID  uint64 `json:"blod_id" form:"blog_id" binding:"required" example:"2"`
+	BlogID  uint64 `json:"blog_id" form:"blog_id" binding:"required" example:"4"`
 }
 
 type CommentResponseDTO struct {
